fix: fixing gap with responsive design

--- a/src/pages/pokemon-infos/PokemonInfo.scss
+++ b/src/pages/pokemon-infos/PokemonInfo.scss
@@ -1,5 +1,5 @@
 .about-list-title{
-    width: 9rem;
+    width: 7rem;
     font-weight: 600;
     text-align: left;
     color: #9CA3AF;
